--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,6 +5,13 @@
 <%= link_to "View my Songs", user_songs_path(@user) %>
 
 <%= link_to "Create Playlist", new_user_playlist_path(@user) %>
+<p>
+<% @user.playlists.each do |playlist| %>
+<%= link_to "#{playlist.title}", playlist_path(playlist) %>
+<%= link_to "Share Playlist", new_playlist_user_path %>
+  <% end %>
+</p>
+
 
 <p><%= link_to "Edit My Info", edit_user_path(@user) %></p>
 
